<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ashish.syfapplication.ui.home.HomeFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ashish.syfapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">


        <action
            android:id="@+id/action_nav_gallery_to_nav_cat_details"
            app:destination="@+id/nav_cat_details" />

    </fragment>

    <fragment
        android:id="@+id/nav_cat_details"
        android:name="com.ashish.syfapplication.ui.gallery.CatDetailsFragment"
        android:label="@string/cat_details"
        tools:layout="@layout/fragment_cat_details">

         <argument
             android:name="ImageResponse"
             app:argType="com.ashish.syfapplication.model.ImageResponse" />
    </fragment>


    <!-- <fragment
         android:id="@+id/nav_cat_details"
         android:name="com.ashish.syfapplication.ui.gallery.CatDetailsFragment"
         android:label="@string/cat_details"
         tools:layout="@layout/fragment_cat_details">

         <argument
             android:name="ImageResponse"
             app:argType="com.ashish.syfapplication.model.ImageResponse" />
     </fragment>-->

</navigation>